src/AnalizadorSintactico/y.output
   0  $accept : programa $end

   1  programa : ID bloque_sentencias

   2  bloque_try : bloque_try_comienzo bloque_catch

   3  $$1 :

   4  bloque_try_comienzo : TRY sentencia_try $$1

   5  bloque_catch : CATCH BEGIN sentencia_compuesta_try END
   6               | error BEGIN sentencia_compuesta_try END
   7               | CATCH BEGIN sentencia_compuesta_try error
   8               | CATCH error sentencia_compuesta_try END

   9  bloque_sentencias : sentencia_declarativa BEGIN sentencia_compuesta END ';'
  10                    | sentencia_declarativa BEGIN sentencia_compuesta END error
  11                    | sentencia_declarativa BEGIN sentencia_compuesta error ';'
  12                    | sentencia_declarativa error sentencia_compuesta END ';'
  13                    | sentencia_declarativa BEGIN END ';'
  14                    | sentencia_declarativa error END ';'
  15                    | sentencia_declarativa BEGIN error ';'
  16                    | sentencia_declarativa BEGIN END error
  17                    | BEGIN sentencia_compuesta END ';'
  18                    | error sentencia_compuesta END ';'
  19                    | BEGIN sentencia_compuesta error ';'
  20                    | BEGIN sentencia_compuesta END error
  21                    | BEGIN END ';'
  22                    | sentencia_simple

  23  sentencia_declarativa : sentencia_declarativa declaracion ';'
  24                        | sentencia_declarativa declaracion error
  25                        | declaracion ';'
  26                        | declaracion error

  27  declaracion : declaracion_var
  28              | func

  29  declaracion_var : tipo lista_var

  30  $$2 :

  31  declaracion_var : FUNC $$2 lista_var
  32                  | error lista_var

  33  tipo : DOUBLE
  34       | ULONG

  35  lista_var : lista_var ',' ID
  36            | ID
  37            | error

  38  func : declaracion_func parametro_func cuerpo_func

  39  $$3 :

  40  declaracion_func : tipo FUNC ID $$3

  41  parametro_func : '(' parametro ')'

  42  parametro : tipo ID

  43  cuerpo_func : sentencia_declarativa BEGIN sentencia_compuesta RETURN '(' expresion ')' ';' END
  44              | BEGIN sentencia_compuesta RETURN '(' expresion ')' ';' END
  45              | sentencia_declarativa BEGIN RETURN '(' expresion ')' ';' END

  46  $$4 :

  47  cuerpo_func : sentencia_declarativa BEGIN sentencia_compuesta RETURN '(' expresion ')' ';' POST ':' '(' condicion ')' ';' END $$4

  48  $$5 :

  49  cuerpo_func : BEGIN sentencia_compuesta RETURN '(' expresion ')' ';' POST ':' '(' condicion ')' ';' END $$5
  50              | cuerpo_func_error

  51  cuerpo_func_error : sentencia_declarativa error sentencia_compuesta RETURN '(' expresion ')' ';' END
  52                    | sentencia_declarativa BEGIN sentencia_compuesta RETURN '(' expresion ')' ';' error END
  53                    | sentencia_declarativa BEGIN sentencia_compuesta RETURN error expresion ')' ';' END
  54                    | sentencia_declarativa BEGIN sentencia_compuesta RETURN '(' expresion error ';' END
  55                    | sentencia_declarativa BEGIN sentencia_compuesta RETURN '(' expresion ')' ';' error
  56                    | error sentencia_compuesta RETURN '(' expresion ')' ';' END
  57                    | BEGIN sentencia_compuesta '(' expresion ')' ';' END
  58                    | BEGIN sentencia_compuesta RETURN '(' expresion ')' ';' error END
  59                    | BEGIN sentencia_compuesta RETURN error expresion ')' ';' END
  60                    | BEGIN sentencia_compuesta RETURN '(' expresion error ';' END
  61                    | BEGIN sentencia_compuesta RETURN '(' expresion ')' ';' error
  62                    | sentencia_declarativa error sentencia_compuesta RETURN '(' expresion ')' ';' POST ':' '(' condicion ')' ';' END
  63                    | sentencia_declarativa BEGIN sentencia_compuesta '(' expresion ')' ';' POST ':' '(' condicion ')' ';' END
  64                    | sentencia_declarativa BEGIN sentencia_compuesta RETURN '(' expresion ')' error ';' POST ':' '(' condicion ')' ';' END
  65                    | sentencia_declarativa BEGIN sentencia_compuesta RETURN '(' expresion ')' ';' POST ':' '(' condicion ')' ';' error
  66                    | sentencia_declarativa BEGIN sentencia_compuesta RETURN '(' expresion ')' ';' error ':' '(' condicion ')' ';' END
  67                    | sentencia_declarativa error RETURN '(' expresion ')' ';' END
  68                    | sentencia_declarativa BEGIN '(' expresion ')' ';' END
  69                    | sentencia_declarativa BEGIN RETURN '(' expresion ')' ';' error END
  70                    | sentencia_declarativa BEGIN RETURN error expresion ')' ';' END
  71                    | sentencia_declarativa BEGIN RETURN '(' expresion error ';' END
  72                    | sentencia_declarativa BEGIN RETURN '(' expresion ')' ';' error

  73  expresion : expresion '+' termino
  74            | expresion '-' termino
  75            | termino

  76  termino : termino '*' factor
  77          | termino '/' factor
  78          | factor

  79  factor : ID

  80  $$6 :

  81  factor : '-' CTE $$6
  82         | CTE
  83         | ID '(' parametro_inv ')'
  84         | ERROR
  85         | '-' ERROR

  86  parametro_inv : ID
  87                | '-' CTE
  88                | CTE

  89  sentencia_compuesta : sentencia_compuesta sentencia_simple
  90                      | sentencia_simple

  91  $$7 :

  92  sentencia_simple : ID ASIG expresion ';' $$7
  93                   | ID ASIG error ';'
  94                   | ID ERROR expresion ';'
  95                   | seleccion ';'
  96                   | seleccion error
  97                   | print error
  98                   | print ';'
  99                   | iteracion
 100                   | BREAK ';'
 101                   | BREAK error
 102                   | bloque_try ';'
 103                   | bloque_try error

 104  sentencia_compuesta_try : sentencia_compuesta_try sentencia_try
 105                          | sentencia_try

 106  $$8 :

 107  sentencia_try : ID ASIG expresion ';' $$8
 108                | ID error expresion ';'
 109                | ID ASIG expresion error
 110                | seleccion ';'
 111                | seleccion error
 112                | print error
 113                | print ';'
 114                | iteracion
 115                | BREAK ';'
 116                | BREAK error

 117  $$9 :

 118  seleccion : IF cond THEN cuerpo_if ENDIF $$9
 119            | IF cond error cuerpo_if ENDIF
 120            | IF cond THEN cuerpo_if error
 121            | error cond THEN cuerpo_if ENDIF
 122            | IF error THEN cuerpo_if ENDIF

 123  cuerpo_if : cuerpo_then ELSE cuerpo_else
 124            | cuerpo_then

 125  cuerpo_then : bloque_sentencias

 126  cuerpo_else : bloque_sentencias

 127  cond : '(' condicion ')'

 128  condicion : condicion operadores expresion
 129            | expresion

 130  operadores : '>'
 131             | "MAYOR_IGUAL"
 132             | "MENOR_IGUAL"
 133             | '<'
 134             | "IGUAL"
 135             | "DISTINTO"
 136             | "AND"
 137             | "OR"

 138  $$10 :

 139  print : PRINT '(' CADENA ')' $$10
 140        | PRINT '(' CADENA error
 141        | PRINT '(' error ')'
 142        | PRINT error CADENA ')'

 143  $$11 :

 144  iteracion : inicio_while cond cuerpo_while $$11
 145            | error cond cuerpo_while
 146            | inicio_while error cuerpo_while

 147  inicio_while : WHILE

 148  cuerpo_while : DO bloque_sentencias
 149               | error bloque_sentencias

state 0
	$accept : . programa $end  (0)

	ID  shift 1
	.  error

	programa  goto 2


state 1
	programa : ID . bloque_sentencias  (1)

	error  shift 3
	ID  shift 4
	IF  shift 5
	PRINT  shift 6
	FUNC  shift 7
	BEGIN  shift 8
	BREAK  shift 9
	ULONG  shift 10
	DOUBLE  shift 11
	WHILE  shift 12
	TRY  shift 13
	.  error

	bloque_sentencias  goto 14
	bloque_try  goto 15
	bloque_try_comienzo  goto 16
	sentencia_declarativa  goto 17
	sentencia_simple  goto 18
	declaracion  goto 19
	declaracion_var  goto 20
	func  goto 21
	tipo  goto 22
	declaracion_func  goto 23
	seleccion  goto 24
	print  goto 25
	iteracion  goto 26
	inicio_while  goto 27


state 2
	$accept : programa . $end  (0)

	$end  accept


state 3
	bloque_sentencias : error . sentencia_compuesta END ';'  (18)
	declaracion_var : error . lista_var  (32)
	seleccion : error . cond THEN cuerpo_if ENDIF  (121)
	iteracion : error . cond cuerpo_while  (145)

	error  shift 28
	ID  shift 29
	IF  shift 5
	PRINT  shift 6
	BREAK  shift 9
	WHILE  shift 12
	TRY  shift 13
	'('  shift 30
	.  error

	bloque_try  goto 15
	bloque_try_comienzo  goto 16
	sentencia_compuesta  goto 31
	sentencia_simple  goto 32
	lista_var  goto 33
	seleccion  goto 24
	print  goto 25
	iteracion  goto 26
	cond  goto 34
	inicio_while  goto 27


state 4
	sentencia_simple : ID . ASIG expresion ';' $$7  (92)
	sentencia_simple : ID . ASIG error ';'  (93)
	sentencia_simple : ID . ERROR expresion ';'  (94)

	ASIG  shift 35
	ERROR  shift 36
	.  error


state 5
	seleccion : IF . cond THEN cuerpo_if ENDIF $$9  (118)
	seleccion : IF . cond error cuerpo_if ENDIF  (119)
	seleccion : IF . cond THEN cuerpo_if error  (120)
	seleccion : IF . error THEN cuerpo_if ENDIF  (122)

	error  shift 37
	'('  shift 30
	.  error

	cond  goto 38


state 6
	print : PRINT . '(' CADENA ')' $$10  (139)
	print : PRINT . '(' CADENA error  (140)
	print : PRINT . '(' error ')'  (141)
	print : PRINT . error CADENA ')'  (142)

	error  shift 39
	'('  shift 40
	.  error


state 7
	declaracion_var : FUNC . $$2 lista_var  (31)
	$$2 : .  (30)

	.  reduce 30

	$$2  goto 41


state 8
	bloque_sentencias : BEGIN . sentencia_compuesta END ';'  (17)
	bloque_sentencias : BEGIN . sentencia_compuesta error ';'  (19)
	bloque_sentencias : BEGIN . sentencia_compuesta END error  (20)
	bloque_sentencias : BEGIN . END ';'  (21)

	error  shift 42
	ID  shift 4
	IF  shift 5
	PRINT  shift 6
	END  shift 43
	BREAK  shift 9
	WHILE  shift 12
	TRY  shift 13
	.  error

	bloque_try  goto 15
	bloque_try_comienzo  goto 16
	sentencia_compuesta  goto 44
	sentencia_simple  goto 32
	seleccion  goto 24
	print  goto 25
	iteracion  goto 26
	inicio_while  goto 27


state 9
	sentencia_simple : BREAK . ';'  (100)
	sentencia_simple : BREAK . error  (101)

	error  shift 45
	';'  shift 46
	.  error


state 10
	tipo : ULONG .  (34)

	.  reduce 34


state 11
	tipo : DOUBLE .  (33)

	.  reduce 33


state 12
	inicio_while : WHILE .  (147)

	.  reduce 147


state 13
	bloque_try_comienzo : TRY . sentencia_try $$1  (4)

	error  shift 42
	ID  shift 47
	IF  shift 5
	PRINT  shift 6
	BREAK  shift 48
	WHILE  shift 12
	.  error

	sentencia_try  goto 49
	seleccion  goto 50
	print  goto 51
	iteracion  goto 52
	inicio_while  goto 27


state 14
	programa : ID bloque_sentencias .  (1)

	.  reduce 1


state 15
	sentencia_simple : bloque_try . ';'  (102)
	sentencia_simple : bloque_try . error  (103)

	error  shift 53
	';'  shift 54
	.  error


state 16
	bloque_try : bloque_try_comienzo . bloque_catch  (2)

	error  shift 55
	CATCH  shift 56
	.  error

	bloque_catch  goto 57


state 17
	bloque_sentencias : sentencia_declarativa . BEGIN sentencia_compuesta END ';'  (9)
	bloque_sentencias : sentencia_declarativa . BEGIN sentencia_compuesta END error  (10)
	bloque_sentencias : sentencia_declarativa . BEGIN sentencia_compuesta error ';'  (11)
	bloque_sentencias : sentencia_declarativa . error sentencia_compuesta END ';'  (12)
	bloque_sentencias : sentencia_declarativa . BEGIN END ';'  (13)
	bloque_sentencias : sentencia_declarativa . error END ';'  (14)
	bloque_sentencias : sentencia_declarativa . BEGIN error ';'  (15)
	bloque_sentencias : sentencia_declarativa . BEGIN END error  (16)
	sentencia_declarativa : sentencia_declarativa . declaracion ';'  (23)
	sentencia_declarativa : sentencia_declarativa . declaracion error  (24)

	error  shift 58
	FUNC  shift 7
	BEGIN  shift 59
	ULONG  shift 10
	DOUBLE  shift 11
	.  error

	declaracion  goto 60
	declaracion_var  goto 20
	func  goto 21
	tipo  goto 22
	declaracion_func  goto 23


state 18
	bloque_sentencias : sentencia_simple .  (22)

	.  reduce 22


state 19
	sentencia_declarativa : declaracion . ';'  (25)
	sentencia_declarativa : declaracion . error  (26)

	error  shift 61
	';'  shift 62
	.  error


state 20
	declaracion : declaracion_var .  (27)

	.  reduce 27


state 21
	declaracion : func .  (28)

	.  reduce 28


state 22
	declaracion_var : tipo . lista_var  (29)
	declaracion_func : tipo . FUNC ID $$3  (40)

	error  shift 63
	ID  shift 64
	FUNC  shift 65
	.  error

	lista_var  goto 66


state 23
	func : declaracion_func . parametro_func cuerpo_func  (38)

	'('  shift 67
	.  error

	parametro_func  goto 68


state 24
	sentencia_simple : seleccion . ';'  (95)
	sentencia_simple : seleccion . error  (96)

	error  shift 69
	';'  shift 70
	.  error


state 25
	sentencia_simple : print . error  (97)
	sentencia_simple : print . ';'  (98)

	error  shift 71
	';'  shift 72
	.  error


state 26
	sentencia_simple : iteracion .  (99)

	.  reduce 99


state 27
	iteracion : inicio_while . cond cuerpo_while $$11  (144)
	iteracion : inicio_while . error cuerpo_while  (146)

	error  shift 73
	'('  shift 30
	.  error

	cond  goto 74


state 28
	lista_var : error .  (37)
	seleccion : error . cond THEN cuerpo_if ENDIF  (121)
	iteracion : error . cond cuerpo_while  (145)

	'('  shift 30
	error  reduce 37
	';'  reduce 37
	','  reduce 37

	cond  goto 34


state 29
	lista_var : ID .  (36)
	sentencia_simple : ID . ASIG expresion ';' $$7  (92)
	sentencia_simple : ID . ASIG error ';'  (93)
	sentencia_simple : ID . ERROR expresion ';'  (94)

	ASIG  shift 35
	ERROR  shift 36
	error  reduce 36
	';'  reduce 36
	','  reduce 36


state 30
	cond : '(' . condicion ')'  (127)

	ID  shift 75
	CTE  shift 76
	ERROR  shift 77
	'-'  shift 78
	.  error

	expresion  goto 79
	condicion  goto 80
	termino  goto 81
	factor  goto 82


state 31
	bloque_sentencias : error sentencia_compuesta . END ';'  (18)
	sentencia_compuesta : sentencia_compuesta . sentencia_simple  (89)

	error  shift 42
	ID  shift 4
	IF  shift 5
	PRINT  shift 6
	END  shift 83
	BREAK  shift 9
	WHILE  shift 12
	TRY  shift 13
	.  error

	bloque_try  goto 15
	bloque_try_comienzo  goto 16
	sentencia_simple  goto 84
	seleccion  goto 24
	print  goto 25
	iteracion  goto 26
	inicio_while  goto 27


state 32
	sentencia_compuesta : sentencia_simple .  (90)

	.  reduce 90


state 33
	declaracion_var : error lista_var .  (32)
	lista_var : lista_var . ',' ID  (35)

	','  shift 85
	error  reduce 32
	';'  reduce 32


state 34
	seleccion : error cond . THEN cuerpo_if ENDIF  (121)
	iteracion : error cond . cuerpo_while  (145)

	error  shift 86
	THEN  shift 87
	DO  shift 88
	.  error

	cuerpo_while  goto 89


state 35
	sentencia_simple : ID ASIG . expresion ';' $$7  (92)
	sentencia_simple : ID ASIG . error ';'  (93)

	error  shift 90
	ID  shift 75
	CTE  shift 76
	ERROR  shift 77
	'-'  shift 78
	.  error

